--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ name: Dmytro Chornyi
 провідний інженер С-150
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
+avatar: https://amkid.github.io/images/jekyll-logo.png
 
 #
 # Flags below are optional
